Add max file size property for uploaded images

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
   output:
     ansi:
       enabled: always
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 2MB
 #  jpa:
 #    open-in-view: false
 #    pr
